# apps/spring-api/src/main/java/com/codesquad/issueTracker/comment/dto/CommentResponse.java
@@ -8,10 +8,15 @@ public record CommentResponse (
         Long id,
         String type,
         String content,
-        LocalDateTime created_at
+        LocalDateTime created_at,
+        String username
 ){
 
     public CommentResponse(Comment comment){
-        this(comment.getId(),comment.getType(),comment.getContent(),comment.getCreatedAt());
+        this(comment, "알 수 없음");
+    }
+
+    public CommentResponse(Comment comment, String username){
+        this(comment.getId(),comment.getType(),comment.getContent(),comment.getCreatedAt(), username);
     }
 }
