# packages/api-spec/openapi.yaml
@@ -134,6 +134,61 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ApiResponseVoid"
+  /api/users/signup:
+    post:
+      tags:
+      - user-controller
+      operationId: postSignupRequest
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/SignupRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApiResponseVoid"
+  /api/users/signin:
+    post:
+      tags:
+      - user-controller
+      operationId: postSignInRequest
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LoginRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApiResponseAccessTokenResponse"
+  /api/users/refresh:
+    post:
+      tags:
+      - user-controller
+      operationId: refreshAccessToken
+      parameters:
+      - name: refreshToken
+        in: cookie
+        required: false
+        schema:
+          type: string
+          default: none
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApiResponseAccessTokenResponse"
   /api/milestones:
     get:
       tags:
@@ -145,10 +200,10 @@ paths:
         required: false
         schema:
           type: string
-          default: OPEN
           enum:
           - OPEN
           - CLOSED
+          default: OPEN
       responses:
         "200":
           description: OK
@@ -341,6 +396,18 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ApiResponseVoid"
+  /api/users/me:
+    get:
+      tags:
+      - user-controller
+      operationId: getMyInfo
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApiResponseUserInfoResponse"
   /api/comments/{id}:
     delete:
       tags:
@@ -461,6 +528,59 @@ components:
           enum:
           - DARK
           - LIGHT
+    SignupRequest:
+      required:
+      - password
+      - username
+      type: object
+      properties:
+        username:
+          maxLength: 32
+          minLength: 4
+          type: string
+        password:
+          maxLength: 64
+          minLength: 8
+          pattern: "^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=!]).*$"
+          type: string
+    ApiResponseVoid:
+      type: object
+      properties:
+        success:
+          type: boolean
+        data:
+          type: object
+        error:
+          $ref: "#/components/schemas/ErrorDto"
+    LoginRequest:
+      required:
+      - password
+      - username
+      type: object
+      properties:
+        username:
+          maxLength: 32
+          minLength: 4
+          type: string
+        password:
+          maxLength: 64
+          minLength: 8
+          pattern: "^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=!]).*$"
+          type: string
+    AccessTokenResponse:
+      type: object
+      properties:
+        accessToken:
+          type: string
+    ApiResponseAccessTokenResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+        data:
+          $ref: "#/components/schemas/AccessTokenResponse"
+        error:
+          $ref: "#/components/schemas/ErrorDto"
     IssueRequest:
       type: object
       properties:
@@ -583,15 +703,6 @@ components:
           enum:
           - OPEN
           - CLOSED
-    ApiResponseVoid:
-      type: object
-      properties:
-        success:
-          type: boolean
-        data:
-          type: object
-        error:
-          $ref: "#/components/schemas/ErrorDto"
     BulkIssueRequest:
       required:
       - issueIds
@@ -608,6 +719,25 @@ components:
           enum:
           - OPEN
           - CLOSED
+    ApiResponseUserInfoResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+        data:
+          $ref: "#/components/schemas/UserInfoResponse"
+        error:
+          $ref: "#/components/schemas/ErrorDto"
+    UserInfoResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        username:
+          type: string
+        profileImageUrl:
+          type: string
     ApiResponseMilestoneListResponse:
       type: object
       properties:
